started chanign lowercase allvevs

--- a/public/allVevs/allvevs.html
+++ b/public/allVevs/allvevs.html
@@ -11,43 +11,11 @@
 
     <script src="../js/cookie.js" defer></script>
     <script src="allVevs.js" defer></script>
-
-    <style>
-        .sidebar {
-            position: relative;
-            
-            width: 75vw;
-            margin-inline: auto;
-        }
-    </style>    
-
+    <link rel="stylesheet" type="text/css" href="allvevs.css">
 </head>
 
 
 <body>
-    <!-- Cookie consent pop-up -->
-    <div id="cookie-consent-popup">
-        <p>Cookies används för att förbättra din upplevelse. Genom att använda sidan godkänner användningen av cookies.</p>
-        <button id="understood-button">OK!</button>
-    </div>
-
-
-
-    <div id="colorDiv" class="colorDiv">
-        <div class="colorPickers">
-            <label for="backgroundColorPicker" class="sr-only">Background color picker</label>
-            <input type="color" id="backgroundColorPicker" class="colorPicker">
-            <div id="backgroundColorPreview" class="colorPreview"></div>
-
-            <label for="contrastColorPicker" class="sr-only">Background color picker</label>
-            <input type="color" id="contrastColorPicker" class="colorPicker">
-            <div id="contrastColorPreview" class="colorPreview"></div>
-
-        </div>
-        <button id="resetColorPickers" class="button">Återställ</button>
-    </div>
-
-
 
     <div class="sidebar pastVevSidebar">
         <div class="header">
