--- a/public/howto/howto.html
+++ b/public/howto/howto.html
@@ -56,7 +56,7 @@
         <a href="../index.html" class="hiddenLink ">
             <button class="howto button">Boka vev</button>
         </a>
-        <a href="../allVevs/allVevs.html" class="hiddenLink ">
+        <a href="../allvevs/allvevs.html" class="hiddenLink ">
             <button class="howto button">Alla vev</button>
         </a>
     </div>
