--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
     
 
     <div class="footerLinks">
-            <a href="allVevs/allVevs.html" class="hiddenLink ">
+            <a href="allvevs/allvevs.html" class="hiddenLink ">
                 <div class="howto button">All Vevs</div>
             </a>
             <a href="howto/howto.html" class="hiddenLink ">
